# lumen-runtime

./: .containerignore  .gitignore  CLAUDE.md  README.md  get-lumen.sh  lumen  pyproject.toml
.github/workflows/: publish-image.yml
cli/: README.md  index.js  package.json
dist-mac/: INSTALL-mac.md  install-lumen-mac.sh
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/api/: client.ts  types.ts
ops/container/: Containerfile  build.sh  install.sh
scripts/: build.sh
tests/security/: test_approval_gate_totp.py  test_confused_deputy_remediation.py  test_dbus_runtime1_contract.py  test_dbus_sender_uid_spoofing.py  test_dbus_wiring.py  test_mfa_tier_approve_totp_forwarding.py
tests/security_center/: test_policy_service.py  test_scan_service.py  test_v0211_hardening.py  test_v028_hardening.py
tests/unit/: test_autonomy_level.py  test_bug3_native_skills_list.py  test_dbus_agent_governance.py  test_dbus_desktop_methods.py  test_dbus_memory_verbs.py  test_dbus_provider_verbs.py  test_dbus_runtime_client.py  test_dbus_skill_governance.py  test_f3_unified_skill_store.py  test_nous_engine_f2.py  test_per_agent_provider.py  test_providers_rest_gating.py  test_security_findings_skills.py  test_skill_signing_key.py  test_skill_version_coerce.py  test_stream_broker_delta_replay.py  test_tasks_dashboard.py
(+222 files in other folders)
